Add existing website data to CMS collections
Fairs Data Migration:
- Add LeShow Moscow 2025 fair data to CMS
- Add HomeDeco Kazakhstan 2025 fair data
- Add Fashion Week Istanbul 2025 fair data
- Include proper Turkish and English names
- Set slider and form visibility settings

Timeline Data Migration:
- Add 2024 LeShow Moscow timeline entry
- Add 2024 HomeDeco Kazakhstan timeline entry
- Add 2024 Furniture Istanbul timeline entry
- Include all required fields (area, participants, sector)

Partners Data Migration:
- Add existing partner logos (01, 02, 03)
- Set proper ordering and active status
- Prepare for dynamic partner management

Team Content Migration:
- Add real team page content from existing site
- Include Turkish and English descriptions
- Add proper markdown formatting and bold text

Form Settings:
- Update success messages with proper Turkish text
- Set active year to 2025
- Configure admin email for form submissions

Now admin panel will show real website data instead of placeholder content.

--- a/src/content/settings/forms.yml
+++ b/src/content/settings/forms.yml
@@ -2,8 +2,8 @@ active_year: 2025
 admin_email: "info@turkel.com.tr"
 
 success_messages:
-  tr: "Mesajınız başarıyla gönderildi!"
-  en: "Your message has been sent successfully!"
+  tr: "Mesajınız başarıyla gönderildi! En kısa sürede size dönüş yapacağız."
+  en: "Your message has been sent successfully! We will get back to you soon."
 
 error_messages:
   tr: "Bir hata oluştu, lütfen tekrar deneyin."
