--- a/src/content/team/content.yml
+++ b/src/content/team/content.yml
@@ -4,15 +4,13 @@ titles:
 
 content:
   tr: |
-    Türkel Fuarcılık A.Ş. İstanbul Merkez, Moskova/RF ve Almatı/Kazakistan ofisleri ile 76 kişilik profesyonel yönetici ve satış ekibi kadrosuyla, 
-    uluslararası fuarcılık sektöründe faaliyet göstermektedir.
-    
-    Deneyimli ekibimiz ile müşterilerimize en kaliteli hizmeti sunmayı hedefliyoruz.
+    Türk fuarcılık sektörünün önde gelen ve deneyimli bir profesyonel uluslararası fuar ve ticari etkinlik organizatörü olan **Türkel Fuarcılık A.Ş.** **İstanbul Merkez**, **Moskova/RF** ve **Almatı/Kazakistan** saha ofislerinde görevli deneyimli, yenilikçi ve özverili **76 kişilik profesyonel yönetici ve satış ekibi kadrosuyla** fuar katılım planlaması, organizasyon yönetimi, tanıtım ve pazarlama ile iletişim konularında Türk ve yabancı müşterilerine uluslararası standartlara uygun seçkin hizmetler sunmaktadır.
+
+    Ayrıca, **Türkel Fuarcılık A.Ş.** uluslararası ticari sektörel fuar katılımcısı müşterilerine; fuar standı tasarımı ve kurulumu ile teknik hizmetler, lojistik ve nakliye, uluslararası seyahat, ulaşım ve konaklama alanlarında da ayrıcalıklı hizmet desteği sağlamaktadır.
   
   en: |
-    Türkel Fair Organization Inc. operates in the international fair industry with its Istanbul Headquarters, Moscow/RF and Almaty/Kazakhstan offices 
-    and a professional management and sales team of 76 people.
-    
-    We aim to provide the highest quality service to our customers with our experienced team.
+    **Türkel Fair Organization Inc.**, a leading and experienced professional international fair and commercial event organizer in the Turkish fair industry, provides distinguished services in accordance with international standards to Turkish and foreign customers in fair participation planning, organization management, promotion and marketing and communication with its experienced, innovative and dedicated **professional management and sales team of 76 people** working in **Istanbul Headquarters**, **Moscow/RF** and **Almaty/Kazakhstan** field offices.
+
+    In addition, **Türkel Fair Organization Inc.** also provides privileged service support to its international commercial sectoral fair participant customers in the areas of fair stand design and installation and technical services, logistics and transportation, international travel, transportation and accommodation.
 
 team_count: "76 kişilik"
