--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -25,21 +25,38 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "Fuarlar Listesi"
+          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
             name: "fairs"
             widget: "list"
-            summary: "{{fields.name_tr}} | {{fields.date}} | {{fields.location_tr}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            collapsed: false
+            minimize_collapsed: false
             fields:
-              - {label: "Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
-              - {label: "Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-              - {label: "Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
-              - {label: "Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
-              - {label: "Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
-              - {label: "Sektör", name: "sector", widget: "string", hint: "Örnek: Moda ve Tekstil"}
-              - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında"}
-              - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Kart arka planı"}
-              - {label: "Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false}
-              - {label: "İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true}
+              - label: "📝 Temel Bilgiler"
+                name: "basic_info"
+                widget: "object"
+                collapsed: false
+                fields:
+                  - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
+                  - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📅 Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
+                  - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
+                  - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
+                  - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Diğer"]}
+              - label: "🖼️ Görseller"
+                name: "visuals"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında fuar logosu"}
+                  - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Fuar kartı arka plan görseli"}
+              - label: "⚙️ Görünürlük Ayarları"
+                name: "settings"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "🎠 Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false, hint: "Bu fuar ana sayfa slider'ında gösterilsin mi?"}
+                  - {label: "📝 İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true, hint: "Bu fuar form dropdown'ında gösterilsin mi?"}
       
       - label: "2025 Fuarları"
         name: "fairs_2025"
@@ -53,21 +70,38 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "Fuarlar Listesi"
+          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
             name: "fairs"
             widget: "list"
-            summary: "{{fields.name_tr}} | {{fields.date}} | {{fields.location_tr}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            collapsed: false
+            minimize_collapsed: false
             fields:
-              - {label: "Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
-              - {label: "Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-              - {label: "Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
-              - {label: "Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
-              - {label: "Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
-              - {label: "Sektör", name: "sector", widget: "string", hint: "Örnek: Moda ve Tekstil"}
-              - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında"}
-              - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Kart arka planı"}
-              - {label: "Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false}
-              - {label: "İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true}
+              - label: "📝 Temel Bilgiler"
+                name: "basic_info"
+                widget: "object"
+                collapsed: false
+                fields:
+                  - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
+                  - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📅 Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
+                  - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
+                  - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
+                  - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Diğer"]}
+              - label: "🖼️ Görseller"
+                name: "visuals"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında fuar logosu"}
+                  - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Fuar kartı arka plan görseli"}
+              - label: "⚙️ Görünürlük Ayarları"
+                name: "settings"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "🎠 Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false, hint: "Bu fuar ana sayfa slider'ında gösterilsin mi?"}
+                  - {label: "📝 İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true, hint: "Bu fuar form dropdown'ında gösterilsin mi?"}
       
       - label: "2024 Fuarları"
         name: "fairs_2024"
@@ -81,21 +115,38 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "Fuarlar Listesi"
+          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
             name: "fairs"
             widget: "list"
-            summary: "{{fields.name_tr}} | {{fields.date}} | {{fields.location_tr}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            collapsed: false
+            minimize_collapsed: false
             fields:
-              - {label: "Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
-              - {label: "Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-              - {label: "Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
-              - {label: "Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
-              - {label: "Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
-              - {label: "Sektör", name: "sector", widget: "string", hint: "Örnek: Moda ve Tekstil"}
-              - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında"}
-              - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Kart arka planı"}
-              - {label: "Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false}
-              - {label: "İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true}
+              - label: "📝 Temel Bilgiler"
+                name: "basic_info"
+                widget: "object"
+                collapsed: false
+                fields:
+                  - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
+                  - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📅 Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
+                  - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
+                  - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
+                  - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Diğer"]}
+              - label: "🖼️ Görseller"
+                name: "visuals"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında fuar logosu"}
+                  - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Fuar kartı arka plan görseli"}
+              - label: "⚙️ Görünürlük Ayarları"
+                name: "settings"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "🎠 Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false, hint: "Bu fuar ana sayfa slider'ında gösterilsin mi?"}
+                  - {label: "📝 İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true, hint: "Bu fuar form dropdown'ında gösterilsin mi?"}
       
       - label: "2023 Fuarları"
         name: "fairs_2023"
@@ -109,21 +160,38 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "Fuarlar Listesi"
+          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
             name: "fairs"
             widget: "list"
-            summary: "{{fields.name_tr}} | {{fields.date}} | {{fields.location_tr}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            collapsed: false
+            minimize_collapsed: false
             fields:
-              - {label: "Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
-              - {label: "Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-              - {label: "Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
-              - {label: "Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
-              - {label: "Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
-              - {label: "Sektör", name: "sector", widget: "string", hint: "Örnek: Moda ve Tekstil"}
-              - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında"}
-              - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Kart arka planı"}
-              - {label: "Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false}
-              - {label: "İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true}
+              - label: "📝 Temel Bilgiler"
+                name: "basic_info"
+                widget: "object"
+                collapsed: false
+                fields:
+                  - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
+                  - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📅 Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
+                  - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
+                  - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
+                  - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Diğer"]}
+              - label: "🖼️ Görseller"
+                name: "visuals"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında fuar logosu"}
+                  - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Fuar kartı arka plan görseli"}
+              - label: "⚙️ Görünürlük Ayarları"
+                name: "settings"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "🎠 Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false, hint: "Bu fuar ana sayfa slider'ında gösterilsin mi?"}
+                  - {label: "📝 İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true, hint: "Bu fuar form dropdown'ında gösterilsin mi?"}
       
       - label: "2022 Fuarları"
         name: "fairs_2022"
@@ -137,21 +205,38 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "Fuarlar Listesi"
+          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
             name: "fairs"
             widget: "list"
-            summary: "{{fields.name_tr}} | {{fields.date}} | {{fields.location_tr}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            collapsed: false
+            minimize_collapsed: false
             fields:
-              - {label: "Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
-              - {label: "Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-              - {label: "Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
-              - {label: "Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
-              - {label: "Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
-              - {label: "Sektör", name: "sector", widget: "string", hint: "Örnek: Moda ve Tekstil"}
-              - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında"}
-              - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Kart arka planı"}
-              - {label: "Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false}
-              - {label: "İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true}
+              - label: "📝 Temel Bilgiler"
+                name: "basic_info"
+                widget: "object"
+                collapsed: false
+                fields:
+                  - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
+                  - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📅 Tarih", name: "date", widget: "string", hint: "Örnek: 15-18 Mart 2025"}
+                  - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
+                  - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
+                  - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Diğer"]}
+              - label: "🖼️ Görseller"
+                name: "visuals"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "Fuar Logosu", name: "logo", widget: "image", hint: "PNG/SVG formatında fuar logosu"}
+                  - {label: "Arka Plan Görseli", name: "background_image", widget: "image", hint: "Fuar kartı arka plan görseli"}
+              - label: "⚙️ Görünürlük Ayarları"
+                name: "settings"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "🎠 Ana Sayfa Slider'ında Göster", name: "show_in_slider", widget: "boolean", default: false, hint: "Bu fuar ana sayfa slider'ında gösterilsin mi?"}
+                  - {label: "📝 İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true, hint: "Bu fuar form dropdown'ında gösterilsin mi?"}
 
 
 
