--- a/src/content/fair-years/2025.yml
+++ b/src/content/fair-years/2025.yml
@@ -1,45 +1,55 @@
 year: 2025
 is_active: true
-
 fairs:
   - basic_info:
-      name_tr: "LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı"
-      name_en: "LeShow Moscow - International Fashion and Textile Industry Fair"
-      date: "15-18 Mart 2025"
-      location_tr: "Moskova, Rusya"
-      location_en: "Moscow, Russia"
-      sector: "Moda ve Tekstil"
+      name_tr: LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı
+      name_en: LeShow Moscow - International Fashion and Textile Industry Fair
+      date: 15-18 Mart 2025
+      location_tr: Moskova, Rusya
+      location_en: Moscow, Russia
+      sector: Moda ve Tekstil
     visuals:
-      logo: "/images/leshow-logo.png"
-      background_image: "/images/leshow-bg.jpg"
+      logo: /images/leshow-logo.png
+      background_image: /images/leshow-bg.jpg
     settings:
       show_in_slider: true
       show_in_forms: true
-  
   - basic_info:
-      name_tr: "HomeDeco Kazakistan - Ev Tekstili ve İç Dekorasyon Ürünleri Fuarı"
-      name_en: "HomeDeco Kazakhstan - Home Textile and Interior Decoration Fair"
-      date: "22-25 Nisan 2025"
-      location_tr: "Almatı, Kazakistan"
-      location_en: "Almaty, Kazakhstan"
-      sector: "Ev Tekstili ve Dekorasyon"
+      name_tr: HomeDeco Kazakistan - Ev Tekstili ve İç Dekorasyon Ürünleri Fuarı
+      name_en: HomeDeco Kazakhstan - Home Textile and Interior Decoration Fair
+      date: 22-25 Nisan 2025
+      location_tr: Almatı, Kazakistan
+      location_en: Almaty, Kazakhstan
+      sector: Ev Tekstili ve Dekorasyon
     visuals:
-      logo: "/images/homedeco-logo.png"
-      background_image: "/images/fuarlar-arkaplan.jpg"
+      logo: /images/homedeco-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
     settings:
       show_in_slider: true
       show_in_forms: true
-  
   - basic_info:
-      name_tr: "Fashion Week İstanbul Premium Tekstil ve Moda Endüstrisi Fuarı"
-      name_en: "Fashion Week Istanbul Premium Textile and Fashion Industry Fair"
-      date: "20-23 Haziran 2025"
-      location_tr: "İstanbul, Türkiye"
-      location_en: "Istanbul, Turkey"
-      sector: "Moda ve Tekstil"
+      name_tr: Fashion Week İstanbul Premium Tekstil ve Moda Endüstrisi Fuarı
+      name_en: Fashion Week Istanbul Premium Textile and Fashion Industry Fair
+      date: 20-23 Haziran 2025
+      location_tr: İstanbul, Türkiye
+      location_en: Istanbul, Turkey
+      sector: Moda ve Tekstil
     visuals:
-      logo: "/images/fashion-logo.png"
-      background_image: "/images/fashion-bg.jpg"
+      logo: /images/fashion-logo.png
+      background_image: /images/fashion-bg.jpg
     settings:
       show_in_slider: false
       show_in_forms: true
+  - settings:
+      show_in_slider: false
+      show_in_forms: true
+    basic_info:
+      name_tr: Test 1950
+      name_en: Test 1950
+      date: 21 01 1991
+      location_tr: turkey
+      location_en: turkey
+      sector: Ev Tekstili ve Dekorasyon
+    visuals:
+      logo: /images/fuarlar-arkaplan.jpg
+      background_image: /images/fuarlar-logo.png
