--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -53,3 +53,16 @@ fairs:
     visuals:
       logo: /images/fuarlar-arkaplan.jpg
       background_image: /images/fuarlar-logo.png
+  - settings:
+      show_in_slider: false
+      show_in_forms: true
+    basic_info:
+      name_tr: test6
+      name_en: test6
+      date: 11.20.2022
+      location_tr: moskova
+      location_en: moscow
+      sector: Gıda ve İçecek
+    visuals:
+      logo: /images/fuarlar-arkaplan.jpg
+      background_image: /images/fuarlar-logo.png
