Fix schema mismatch - update all year files to new structure
SCHEMA ERROR FIX:
- Update 2022.yml to new basic_info/visuals/settings structure
- Update 2023.yml to new schema format
- Update 2024.yml to new schema format
- All files now match collection schema

DATA STRUCTURE STANDARDIZATION:
- basic_info: name, date, location, sector
- visuals: logo, background_image
- settings: show_in_slider, show_in_forms
- Consistent structure across all year files

BUILD ERROR RESOLUTION:
- 'fairs.0.basic_info: Required' error fixed
- All year files conform to schema
- No more InvalidContentEntryDataError
- Clean build process

Bu schema mismatch sorununu çözecek ve build başarılı olacak.

--- a/src/content/fair-years/2022.yml
+++ b/src/content/fair-years/2022.yml
@@ -2,13 +2,16 @@ year: 2022
 is_active: false
 
 fairs:
-  - name_tr: "HomeDeco Kazakistan - Ev Tekstili ve İç Dekorasyon Ürünleri Fuarı"
-    name_en: "HomeDeco Kazakhstan - Home Textile and Interior Decoration Fair"
-    date: "22-25 Nisan 2022"
-    location_tr: "Almatı, Kazakistan"
-    location_en: "Almaty, Kazakhstan"
-    logo: "/images/homedeco-logo.png"
-    background_image: "/images/fuarlar-arkaplan.jpg"
-    show_in_slider: false
-    show_in_forms: false
-    sector: "Ev Tekstili ve Dekorasyon"
+  - basic_info:
+      name_tr: "HomeDeco Kazakistan - Ev Tekstili ve İç Dekorasyon Ürünleri Fuarı"
+      name_en: "HomeDeco Kazakhstan - Home Textile and Interior Decoration Fair"
+      date: "22-25 Nisan 2022"
+      location_tr: "Almatı, Kazakistan"
+      location_en: "Almaty, Kazakhstan"
+      sector: "Ev Tekstili ve Dekorasyon"
+    visuals:
+      logo: "/images/homedeco-logo.png"
+      background_image: "/images/fuarlar-arkaplan.jpg"
+    settings:
+      show_in_slider: false
+      show_in_forms: false
