--- a/src/content/fair-years/2023.yml
+++ b/src/content/fair-years/2023.yml
@@ -2,13 +2,16 @@ year: 2023
 is_active: false
 
 fairs:
-  - name_tr: "LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı"
-    name_en: "LeShow Moscow - International Fashion and Textile Industry Fair"
-    date: "15-18 Mart 2023"
-    location_tr: "Moskova, Rusya"
-    location_en: "Moscow, Russia"
-    logo: "/images/leshow-logo.png"
-    background_image: "/images/leshow-bg.jpg"
-    show_in_slider: false
-    show_in_forms: false
-    sector: "Moda ve Tekstil"
+  - basic_info:
+      name_tr: "LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı"
+      name_en: "LeShow Moscow - International Fashion and Textile Industry Fair"
+      date: "15-18 Mart 2023"
+      location_tr: "Moskova, Rusya"
+      location_en: "Moscow, Russia"
+      sector: "Moda ve Tekstil"
+    visuals:
+      logo: "/images/leshow-logo.png"
+      background_image: "/images/leshow-bg.jpg"
+    settings:
+      show_in_slider: false
+      show_in_forms: false
